5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1716_2506.log
== TEST (2019-05-14 17:38:14) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while x>0 and x<a:
	a = x*y
	x1 = x + a
	x2 = x - w
	t += 1 
	
if x1>=a:
	m = ("lIMITE")
if x1 <= 0:
	m = ("EXTINCAO")
print(m)
print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:40:24) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while x>0 and x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	
if x1>=a:
	m = ("lIMITE")
if x1 <= 0:
	m = ("EXTINCAO")
print(m)
print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:40) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while x>0 and x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	
if x1>=a:
	print("lIMITE")
if x1 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:51) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while x>0 and x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:58) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while x>0 and x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:45) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while 0<x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	print()
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:48) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while 0<x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	print(t)
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:02) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while 0<x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	print(X1)
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(X1)
NameError: name 'X1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:14) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
a = 120000
t = 0
y = y/100

while 0<x<a:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	print(x1)
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1308.04
lIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:07) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
s = 120000
t = 0
y = y/100

while 0<x<s:
	a = x*y
	x1 = x + a
	x2 = x1 - w
	t += 1 
	print(x1)
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:22) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
s = 120000
t = 0
y = y/100

while 0<x<s:
	a = x*y
	x1 = a + x
	x2 = x1 - w
	t += 1 
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:40) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
s = 120000
t = 0
y = y/100

while 0<x<s:
	a = x*y
	x1 = a + x
	x2 = x1 - w
	t += 1 
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
1308.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:46:04) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
s = 120000
t = 0
y = y/100

while 0<x<s:
	a = x*y
	x1 = a + x
	x2 = x1 - w
	t += 1 
	print(t)
if x2>=a:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:52) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
t = 0
y = y/100

while 0<x<12000:
	a = x*y
	x1 = a + x
	x2 = x1 - w
	t += 1 
if x2>=12000:
	print("lIMITE")
if x2 <= 0:
	print("EXTINCAO")

print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:58) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
t = 0
y = y/100

while 0<x<12000:
	a = x*y
	x = a + x
	x = x - w
	t += 1 
if x <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")

print(t)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:04) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))
w = float(input("w: "))
t = 0
y = y/100

while 0<x<12000:
	a = x*y
	x = a + x
	x = x - w
	t += 1 
if x <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")

print(t)
-- EXECUTION TIME:
0.134063
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
